Fix list alignment and center image on cheesecake.html

--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ h1 {
     font-weight: bold;
 }
 
-body {
-    text-align: center;
+img {
+    width: 60%;
+    margin: auto;
+    display: block;
 }
